Oh neat I had a whole Validator class I forgot to use

--- a/example/night.html
+++ b/example/night.html
@@ -16,6 +16,17 @@
         margin: 0 auto;
       }
 
+      .section-header {
+        margin: 0 0 20px 0;
+        padding: 0 0 20px 0;
+        border-bottom: 1px solid #000000;
+      }
+
+      .section-header h3 {
+        margin: 0;
+        padding: 0;
+      }
+
       .page {
         margin: 0 0 20px 0;
         padding: 0 0 20px 0;
@@ -68,6 +79,6 @@
       <h1>Example Comic Script</h1>
       <h2>By Peter Wartman</h2>
     </header>
-    <main class="document"><h3>Chapter 1</h3><section class="page"><header class="page-header">Page 1 - 3 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>We open on a dark and stormy night. This first panel here should be big -- really get that stormy atmosphere.</p><p>Maybe like <a href="some/url.png">this</a> or something?</p><div class="dialog dialog-caption"><header class="dialog-header"><span class="dialog-header-speaker">CAPTION</span><span class="dialog-header-modifiers">Night</span></header><div class="dialog-content"><p>A dark and stormy night...</p></div></div></div><div class="panel"><header class="panel-header" id="panel-2">Panel 2</header><p>Fred turns to his friend. He looks around nervously.</p><div class="dialog"><header class="dialog-header"><span class="dialog-header-speaker">FRED FREDSON</span><span class="dialog-header-modifiers">OFF</span></header><div class="dialog-content"><p>Hey Bob, it sure is <i>stormy</i> out here.</p><p>Kind of <i>scary</i> </p></div></div><div class="dialog"><header class="dialog-header"><span class="dialog-header-speaker">BOB BOBSMAN</span></header><div class="dialog-content"><p>You got that right, friend.</p></div></div></div><div class="panel"><header class="panel-header" id="panel-3">Panel 3</header><p>There is a long and awkward silence.</p></div></section><section class="page"><header class="page-header">Page 2 - 2 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>A lightning bolt comes out of nowhere and incinerates both characters. It is grisly and a bit horrifying.</p><p>But also funny.</p><div class="dialog dialog-sfx"><header class="dialog-header"><span class="dialog-header-speaker">SFX</span><span class="dialog-header-modifiers">Lightning</span></header><div class="dialog-content"><p>KRRKOOM</p></div></div></div><div class="panel"><header class="panel-header" id="panel-2">Panel 2</header><p>Fade to black.</p><p>In a comic.</p><p>You can figure it out.</p></div></section><h3>Chapter 2</h3><section class="page"><header class="page-header">Page 3 - 1 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>Suddenly more things happen. </p></div></section></main>
+    <main class="document"><header class="section-header"><h3>Chapter 1</h3></header><section class="page"><header class="page-header">Page 1 - 3 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>We open on a dark and stormy night. This first panel here should be big -- really get that stormy atmosphere.</p><p>Maybe like <a href="some/url.png">this</a> or something?</p><div class="dialog dialog-caption"><header class="dialog-header"><span class="dialog-header-speaker">CAPTION</span><span class="dialog-header-modifiers">Night</span></header><div class="dialog-content"><p>A dark and stormy night...</p></div></div></div><div class="panel"><header class="panel-header" id="panel-2">Panel 2</header><p>Fred turns to his friend. He looks around nervously.</p><div class="dialog"><header class="dialog-header"><span class="dialog-header-speaker">FRED FREDSON</span><span class="dialog-header-modifiers">OFF</span></header><div class="dialog-content"><p>Hey Bob, it sure is <i>stormy</i> out here.</p><p>Kind of <i>scary</i> </p></div></div><div class="dialog"><header class="dialog-header"><span class="dialog-header-speaker">BOB BOBSMAN</span></header><div class="dialog-content"><p>You got that right, friend.</p></div></div></div><div class="panel"><header class="panel-header" id="panel-3">Panel 3</header><p>There is a long and awkward silence.</p></div></section><section class="page"><header class="page-header">Page 2 - 2 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>A lightning bolt comes out of nowhere and incinerates both characters. It is grisly and a bit horrifying.</p><p>But also funny.</p><div class="dialog dialog-sfx"><header class="dialog-header"><span class="dialog-header-speaker">SFX</span><span class="dialog-header-modifiers">Lightning</span></header><div class="dialog-content"><p>KRRKOOM</p></div></div></div><div class="panel"><header class="panel-header" id="panel-2">Panel 2</header><p>Fade to black.</p><p>In a comic.</p><p>You can figure it out.</p></div></section><header class="section-header"><h3>Chapter 2</h3></header><section class="page"><header class="page-header">Page 3 - 1 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>Suddenly more things happen. </p></div></section></main>
   </body>
 </html>
