Cleanup to generation

--- a/example/night-alternative.html
+++ b/example/night-alternative.html
@@ -74,6 +74,11 @@
       .dialog-header-modifiers:after {
         content: ")"
       }
+
+      .aside {
+        border-left: 3px solid #ccc;
+        padding-left: 20px;
+      }
     </style>
     <header class="comic-header page">
       <h1>Example Comic Script</h1>
