--- a/example/night.html
+++ b/example/night.html
@@ -7,14 +7,30 @@
   <body>
     <style>
       body {
-        font-family: sans-serif, "Helvetica Neue", arial;
+        font-family: Courier, monospace;
         font-size: 15px;
       }
+
+			h1, h2, h3, h4, h5 {
+				font-size: inherit;
+				margin: 0;
+			}
 
       .document {
         max-width: 700px;
         margin: 0 auto;
       }
+
+			.comic-header {
+        margin: 0 0 20px 0;
+        padding: 0 0 20px 0;
+        border-bottom: 1px solid #000000;
+			}
+
+			.comic-header-content {
+        max-width: 700px;
+        margin: 0 auto;
+			}
 
       .section-header {
         margin: 0 0 20px 0;
@@ -39,7 +55,7 @@
 
       .page-header {
         margin: 0 0 20px 0;
-        text-decoration: underline;
+        font-weight: bold;
         text-transform: uppercase;
       }
 
@@ -49,7 +65,6 @@
       }
 
       .panel-header {
-        font-weight: bold;
         text-transform: uppercase;
       }
 
@@ -80,9 +95,11 @@
         padding-left: 20px;
       }
     </style>
-    <header class="comic-header page">
-      <h1>Example Comic Script</h1>
-      <h2>By Peter Wartman</h2>
+    <header class="comic-header">
+			<div class="comic-header-content">
+				<h1>Example Comic Script</h1>
+				<h2>By Peter Wartman</h2>
+			</div>
     </header>
     <main class="document"><header class="section-header"><h3>Chapter 1</h3></header><section class="page"><header class="page-header">Page 1 - 3 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>We open on a dark and stormy night. This first panel here should be big -- really get that stormy atmosphere.</p><div class="aside"><p> Maybe like <a href="some/url.png">this</a> or something?</p> <p> This line is a part of the same aside and is a new paragraph. And this line is a part of the same paragraph.</p></div><p> And this is a new paragraph outside the aside.</p><div class="dialog dialog-caption"><header class="dialog-header"><span class="dialog-header-speaker">CAPTION</span><span class="dialog-header-modifiers">Night</span></header><div class="dialog-content"><p>A dark and stormy night...</p></div></div></div><div class="panel"><header class="panel-header" id="panel-2">Panel 2</header><p>Fred turns to his friend. He looks around nervously.</p><div class="dialog"><header class="dialog-header"><span class="dialog-header-speaker">FRED FREDSON</span><span class="dialog-header-modifiers">OFF</span></header><div class="dialog-content"><p>Hey Bob, it sure is <i>stormy</i> out here.</p><p>Kind of <i>scary</i> </p></div></div><div class="dialog"><header class="dialog-header"><span class="dialog-header-speaker">BOB BOBSMAN</span></header><div class="dialog-content"><p>You got that right, friend.</p></div></div></div><div class="panel"><header class="panel-header" id="panel-3">Panel 3</header><p>There is a long and awkward silence.</p></div></section><section class="page"><header class="page-header">Pages 2 to 3 (Spread) - 2 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>A lightning bolt comes out of nowhere and incinerates both characters. It is grisly and a bit horrifying.</p><p>But also funny.</p><div class="dialog dialog-sfx"><header class="dialog-header"><span class="dialog-header-speaker">SFX</span><span class="dialog-header-modifiers">Lightning</span></header><div class="dialog-content"><p>KRRKOOM</p></div></div></div><div class="panel"><header class="panel-header" id="panel-2">Panel 2</header><p>Fade to black.</p><p>In a comic.</p><p>You can figure it out.</p></div></section><header class="section-header"><h3>Chapter 2</h3></header><section class="page"><header class="page-header">Page 4 - 1 Panels</header><div class="panel"><header class="panel-header" id="panel-1">Panel 1</header><p>Suddenly more things happen. </p></div></section></main>
   </body>
